--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
 
       <nav class="header-nav">
         <ul class="nav-list">
-          <li class="nav-item"><a href="" class="nav-link">リスト</a></li>
-          <li class="nav-item"><a href="" class="nav-link">リスト</a></li>
-          <li class="nav-item"><a href="" class="nav-link">リスト</a></li>
-          <li class="nav-item"><a href="" class="nav-link">リスト</a></li>
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">リスト</a>
+          </li>
+          <li class="nav-item">
+            <a href="https://zero-plus.io" class="nav-link">リスト</a>
+          </li>
+          <li class="nav-item">
+            <a href="https://zeroplus-gate.io" class="nav-link">リスト</a>
+          </li>
+          <li class="nav-item">
+            <a href="https://zeroplus-gate.io/media" class="nav-link">リスト</a>
+          </li>
           <li class="nav-item"><a href="" class="nav-link">リスト</a></li>
         </ul>
       </nav>
